# poetry-starter

./: Dockerfile  README.md  makefile  pyproject.toml
src/: app_controller.py  app_module.py  main.py
